[project]
authors = [{name = "Loïc Sauteur", email = "loic.sauteur@unibas.ch"}]
dependencies = []
name = "metroloshiny"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
metroloshiny = { path = ".", editable = true }

[tool.pixi.tasks]
deploy = "sudo cp -R /users/stud/s/sautlo01/metroloshiny/power_at_objective /srv/shiny-server/power_at_objective/;sudo systemctl restart shiny-server"

[tool.pixi.dependencies]
pytest = ">=9.0.2,<10"
shiny = ">=1.4.0,<2"
seaborn = ">=0.13.2,<0.14"
pandas = ">=3.0.1,<4"
python = "3.11.*"
openpyxl = ">=3.1.5,<4"
numpy = ">=2.4.3,<3"
shinywidgets = ">=0.7.1,<0.8"
gspread = ">=5.12.4,<6"
jinja2 = ">=3.1.6,<4"

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.feature.test.tasks]
test = "pytest"

[dependency-groups]
test = ["pytest"]
