[project]
authors = [{name = "Loïc Sauteur", email = "loic.sauteur@unibas.ch"}]
dependencies = ["tables>=3.11.1,<4"] # for OMERO tables (needed?)
name = "metroloshiny"
requires-python = ">= 3.11"
version = "0.1.0"
license = "MIT" # need a file?!

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
metroloshiny = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default"}

[tool.pixi.feature.dev.tasks]
fmt = { cmd="ruff format ." }
lint = { cmd="ruff check . --fix" }
types = { cmd="ty check ." }
black = { cmd="black ."}
test = { cmd="pytest" }
all = { depends-on = ["fmt", "lint", "types", "black", "test"] }

[tool.pixi.feature.dev.dependencies]
pytest = ">=8.3"
pytest-cov = ">=6.0"
ruff = ">=0.11"
pre-commit = ">=4.2"
black = ">=26.3.1,<27"

[tool.pixi.feature.dev.pypi-dependencies]
ty = "*"

#[dependency-groups]
#test = ["pytest"]

[tool.pixi.tasks]
deploy = "sudo rm -r /srv/shiny-server/power_at_objective;sudo cp -R /users/stud/s/sautlo01/metroloshiny/src/metroloshiny/power_at_objective /srv/shiny-server/power_at_objective/;sudo systemctl restart shiny-server"

[tool.pixi.dependencies]
pytest = ">=9.0.2,<10"
shiny = ">=1.4.0,<2"
seaborn = ">=0.13.2,<0.14"
pandas = ">=3.0.1,<4"
python = "3.11.*"
openpyxl = ">=3.1.5,<4"
numpy = "1.26.*"
shinywidgets = ">=0.7.1,<0.8"
gspread = ">=5.12.4,<6"
jinja2 = ">=3.1.6,<4"
beautifulsoup4 = ">=4.14.3,<5"
zeroc-ice = "3.6.5.*"
omero-py = "5.21.2.*"

[tool.black]
line-length = 79
target-version = ["py39", "py310", "py311"]

[tool.ruff]
extend-exclude = ["\\{\\{cookiecutter.package_name\\}\\}"]
line-length = 79

[tool.ruff.lint]
select = [
    "B",  # bugbear
    "D",  # pydocstyle
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming conventions
    "W",  # pycodestyle warnings
    "C4", # comprehensions
    "PL", # pylint
    "PT", # flake8-pytest-style
    "PIE", # misc lints
    "PYI", # flake8-pyi
    "TID", # tidy imports
    "TCH", # type-checking imports
    "RUF", # Ruff-specific rules
    "RSE", # flake8-raise
    "ICN001", # unconventional-import-alias
]
ignore = [
    "N806", # Non-lowercase variable in function
    "PLR0911", # Too many returns
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments to function call
    "PLR0914", # Too many locals
    "PLR0915", # Too many statements
    "PLR1702", # Too many nested-blocks
    "PLR2004", # Magic value used in comparison
    "E741", # Ambiguous variable name, e.g.: `l`
    "PLC0415", # `import` should be at the top-level of a file
    "E501", # line too long. let black handle this
    "E203", # white spaces, let black handle it.
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"**/app.py" = ["D100", "D103"] # Ignore missing docstring for app.py files

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ty.rules]
# See here: https://docs.astral.sh/ty/rules/#rule-levels
invalid-argument-type = "warn" # shiny reactive values setting causes this
not-subscriptable = "warn" #
unresolved-attribute = "warn" # thrown by omero API

#[tool.pytest.ini_options]
#testpaths = ["hooks"]
#addopts = "--doctest-modules"
#doctest_optionflags = "NORMALIZE_WHITESPACE"
